<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewGraph"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="10dp">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/letsgrowmore"
            android:contentDescription="@string/lets_grow_more_png" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/btnTrack"
        android:layout_below="@+id/cardViewGraph"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ScrollView
                android:id="@+id/scrollStats"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/global_stats"
                        android:textAllCaps="true"
                        android:textSize="28sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="20dp"
                        android:background="@color/color_two" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="25dp"
                        android:layout_marginLeft="25dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-condensed-light"
                            android:text="@string/cases"
                            android:textSize="18sp"/>
                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/_0"
                            android:id="@+id/tvCases"
                            android:textAlignment="textEnd"
                            android:textColor="@color/color_one"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:fontFamily="sans-serif-condensed-light"
                            android:layout_alignParentEnd="true"/>

                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:background="@color/color_two" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="25dp"
                        android:layout_marginLeft="25dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-condensed-light"
                            android:text="@string/recovered"
                            android:textSize="18sp"/>
                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/_0"
                            android:id="@+id/tvRecovered"
                            android:textAlignment="textEnd"
                            android:textSize="18sp"
                            android:textColor="@color/color_one"
                            android:textStyle="bold"
                            android:fontFamily="sans-serif-condensed-light"
                            android:layout_alignParentEnd="true"/>

                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/color_two"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="25dp"
                        android:layout_marginLeft="25dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-condensed-light"
                            android:text="@string/critical"
                            android:textSize="18sp"/>
                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/_0"
                            android:id="@+id/tvCritical"
                            android:textAlignment="textEnd"
                            android:textSize="18sp"
                            android:textColor="@color/color_one"
                            android:textStyle="bold"
                            android:fontFamily="sans-serif-condensed-light"
                            android:layout_alignParentEnd="true"/>

                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/color_two"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="25dp"
                        android:layout_marginLeft="25dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-condensed-light"
                            android:text="@string/active"
                            android:textSize="18sp"/>
                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/_0"
                            android:id="@+id/tvActive"
                            android:textAlignment="textEnd"
                            android:textSize="18sp"
                            android:textColor="@color/color_one"
                            android:textStyle="bold"
                            android:fontFamily="sans-serif-condensed-light"
                            android:layout_alignParentEnd="true"/>

                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/color_two"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="25dp"
                        android:layout_marginLeft="25dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-condensed-light"
                            android:text="@string/today_cases"
                            android:textSize="18sp"/>
                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/_0"
                            android:id="@+id/tvTodayCases"
                            android:textAlignment="textEnd"
                            android:textSize="18sp"
                            android:textColor="@color/color_one"
                            android:textStyle="bold"
                            android:fontFamily="sans-serif-condensed-light"
                            android:layout_alignParentEnd="true"/>

                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/color_two"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="25dp"
                        android:layout_marginLeft="25dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-condensed-light"
                            android:text="@string/total_deaths"
                            android:textSize="18sp"/>
                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/_0"
                            android:id="@+id/tvTotalDeaths"
                            android:textAlignment="textEnd"
                            android:textSize="18sp"
                            android:textColor="@color/color_one"
                            android:textStyle="bold"
                            android:fontFamily="sans-serif-condensed-light"
                            android:layout_alignParentEnd="true"/>

                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/color_two"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="25dp"
                        android:layout_marginLeft="25dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-condensed-light"
                            android:text="@string/today_deaths"
                            android:textSize="18sp"/>
                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/_0"
                            android:id="@+id/tvTodayDeaths"
                            android:textAlignment="textEnd"
                            android:textSize="18sp"
                            android:textColor="@color/color_one"
                            android:textStyle="bold"
                            android:fontFamily="sans-serif-condensed-light"
                            android:layout_alignParentEnd="true"/>

                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/color_two"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="25dp"
                        android:layout_marginLeft="25dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-condensed-light"
                            android:text="@string/affected_countries"
                            android:textSize="18sp"/>
                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/_0"
                            android:id="@+id/tvAffectedCountries"
                            android:textAlignment="textEnd"
                            android:textSize="18sp"
                            android:textColor="@color/color_one"
                            android:textStyle="bold"
                            android:fontFamily="sans-serif-condensed-light"
                            android:layout_alignParentEnd="true"/>

                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/color_two"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        />

                </LinearLayout>


            </ScrollView>


        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnTrack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:background="@color/color_one"
        android:text="@string/track_countries"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:padding="5dp" />
</RelativeLayout>